--- a/Biblio/ref.bib
+++ b/Biblio/ref.bib
@@ -3,163 +3,176 @@
 %-                             Bibliography                                -%
 %-                                                                         -%
 %---------------------------------------------------------------------------%
-@book{wikibook2014latex,
-    title={http://en.wikibooks.org/wiki/LaTeX},
-    author={Wikibook},
-    year={2014},
-    publisher={On-line Resources}
-}
-@book{lamport1986document,
-    title={Document Preparation System},
-    author={Lamport, Leslie},
-    year={1986},
-    publisher={Addison-Wesley Reading, MA}
-}
-@article{chen2005zhulu,
-    title={著录文后参考文献的规则及注意事项},
-    author={陈浩元},
-    key={Chen Hao Yuan},
-    journal={编辑学报},
-    volume={17},
-    number={6},
-    pages={413--415},
-    year={2005}
-}
-@book{chu2004tushu,
-    title={图书馆数字参考咨询服务研究},
-    author={初景利},
-    key={Chu Jing Li},
-    year={2004},
-    address={北京},
-    publisher={北京图书馆出版社}
-}
-@article{stamerjohanns2009mathml,
-    title={{MathML}-aware article conversion from {LaTeX}},
-    author={Stamerjohanns, Heinrich and Ginev, Deyan and David, Catalin and Misev, Dimitar and Zamdzhiev, Vladimir and Kohlhase, Michael},
-    journal={Towards a Digital Mathematics Library},
-    volume={16},
-    number={2},
-    pages={109--120},
-    year={2009},
-    publisher={Masaryk University Press}
-}
-@article{betts2005aging,
-    title={Aging reduces center-surround antagonism in visual motion processing},
-    author={Betts, Lisa R and Taylor, Christopher P},
-    journal={Neuron},
-    volume={45},
-    number={3},
-    pages={361--366},
-    year={2005},
-    publisher={Elsevier}
+
+% %
+@inproceedings{hookway1997digital,
+  title={DIGITAL FX! 32 running 32-Bit x86 applications on Alpha NT},
+  author={Hookway, Ray},
+  booktitle={Proceedings IEEE COMPCON 97. Digest of Papers},
+  pages={37--42},
+  year={1997},
+  organization={IEEE}
 }
 
-@article{bravo1990comparative,
-    title={Comparative study of visual inter and intrahemispheric cortico-cortical connections in five native Chilean rodents},
-    author={Bravo, Hermes and Olavarria, Jaime},
-    journal={Anatomy and embryology},
-    volume={181},
-    number={1},
-    pages={67--73},
-    year={1990},
-    publisher={Springer}
-}
-@book{hls2012jinji,
-    author       = {哈里森·沃尔德伦},
-    key          = {Haliseng Woerdelun},
-    translator   = {谢远涛},
-    title        = {经济数学与金融数学},
-    address      = {北京},
-    publisher    = {中国人民大学出版社},
-    year         = {2012},
-    pages        = {235--236},
-}
-@proceedings{niu2013zonghe,
-    editor       = {牛志明 and 斯温兰德 and 雷光春},
-    key          = {Niu Zhi Ming Siwenlande Lei Guang Chun},
-    title        = {综合湿地管理国际研讨会论文集},
-    address      = {北京},
-    publisher    = {海洋出版社},
-    year         = {2013},
-}
-@incollection{chen1980zhongguo,
-    author       = {陈晋镳 and 张惠民 and 朱士兴 and 赵震 and
-        王振刚},
-    key          = {Chen Jing Ao Zhang Hui Ming Zhu Shi Xing Zhao Zhen Wang Zhen Gang},
-    title        = {蓟县震旦亚界研究},
-    editor       = {中国地质科学院天津地质矿产研究所},
-    booktitle    = {中国震旦亚界},
-    address      = {天津},
-    publisher    = {天津科学技术出版社},
-    year         = {1980},
-    pages        = {56--114},
-}
-@article{yuan2012lana,
-    author       = {袁训来 and 陈哲 and 肖书海},
-    key          = {Yuan xun lai Chen zhe Xiao shu Hai},
-    title        = {蓝田生物群: 一个认识多细胞生物起源和早期演化的新窗口 -- 篇一},
-    journal      = {科学通报},
-    year         = {2012},
-    volume       = {57},
-    number       = {34},
-    pages        = {3219},
-}
-@article{yuan2012lanb,
-    author       = {袁训来 and 陈哲 and 肖书海},
-    key          = {Yuan xun lai Chen zhe Xiao shu Hai},
-    title        = {蓝田生物群: 一个认识多细胞生物起源和早期演化的新窗口 -- 篇二},
-    journal      = {科学通报},
-    year         = {2012},
-    volume       = {57},
-    number       = {34},
-    pages        = {3219},
-}
-@article{yuan2012lanc,
-    author       = {袁训来 and 陈哲 and 肖书海},
-    key          = {Yuan xun lai Chen zhe Xiao shu Hai},
-    title        = {蓝田生物群: 一个认识多细胞生物起源和早期演化的新窗口 -- 篇三},
-    journal      = {科学通报},
-    year         = {2012},
-    volume       = {57},
-    number       = {34},
-    pages        = {3219},
-}
-@article{walls2013drought,
-    author       = {Walls, Susan C. and Barichivich, William J. and Brown, Mary
-        E.},
-    title        = {Drought, deluge and declines: the impact of precipitation
-        extremes on amphibians in a changing climate},
-    journal      = {Biology},
-    year         = {2013},
-    volume       = {2},
-    number       = {1},
-    pages        = {399--418},
-    urldate      = {2013-11-04},
-    url          = {http://www.mdpi.com/2079-7737/2/1/399},
-    doi          = {10.3390/biology2010399},
-}
-@article{Bohan1928,
-    author = { ボハン, デ},
-    title = { 過去及び現在に於ける英国と会 },
-    journal = { 日本時報 },
-    year = { 1928 },
-    volume = { 17 },
-    pages = { 5-9 },
-    edition = { 9 },
-    hyphenation = { japanese },
-    language = { japanese }
+@inproceedings{hiser2007evaluating,
+  title={Evaluating indirect branch handling mechanisms in software dynamic translation systems},
+  author={Hiser, Jason D and Williams, Daniel and Hu, Wei and Davidson, Jack W and Mars, Jason and Childers, Bruce R},
+  booktitle={International Symposium on Code Generation and Optimization (CGO'07)},
+  pages={61--73},
+  year={2007},
+  organization={IEEE}
 }
 
-@article{Dubrovin1906,
-    author = { Дубровин, А. И },
-    title = { Открытое письмо Председателя Главного Совета Союза Русского Народа Санкт-Петербургскому Антонию, Первенствующему члену Священного Синода },
-    journal = { Вече },
-    year = { 1906 },
-    volume = {  },
-    edition = { 97 },
-    month = { 7 дек. 1906 },
-    pages = { 1-3 },
-    hyphenation = { russian },
-    language = { russian }
+@inproceedings{yue2010improved,
+  title={An improved code cache management scheme from i386 to alpha in dynamic binary translation},
+  author={Yue, Feng and Pang, Jianmin and Han, Xiaosu and Cui, Jinxian},
+  booktitle={2010 Second International Conference on Computer Modeling and Simulation},
+  volume={2},
+  pages={321--324},
+  year={2010},
+  organization={IEEE}
 }
+
+@inproceedings{shi2016floating,
+  title={Floating point optimization based on binary translation system QEMU},
+  author={Shi, Qiang and Zhao, RongCai},
+  booktitle={2016 2nd Workshop on Advanced Research and Technology in Industry Applications (WARTIA-16)},
+  pages={1338--1343},
+  year={2016},
+  organization={Atlantis Press}
+}
+
+@article{d2016optimizing,
+  title={Optimizing indirect branches in dynamic binary translators},
+  author={d'Antras, Amanieu and Gorgovan, Cosmin and Garside, Jim and Luj{\'a}n, Mikel},
+  journal={ACM Transactions on Architecture and Code Optimization (TACO)},
+  volume={13},
+  number={1},
+  pages={1--25},
+  year={2016},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{huawei2023,
+  author       = {华为技术有限公司},
+  title        = {华为动态二进制翻译工具（ExaGear）},
+  year         = {2023},
+  howpublished = {EB/OL},
+  note         = {[2023-11-23]},
+  url          = {https://www.hikunpeng.com/developer/devkit/exagear}
+}
+
+@misc{apple2023,
+  author       = {Apple Inc.},
+  title        = {About the Rosetta Translation Environment},
+  year         = {2023},
+  howpublished = {J/OL},
+  journal      = {Apple Developer Documentation},
+  note         = {[2023-11-23]},
+  url          = {https://developer.apple.com/documentation/apple-silicon/about-the-rosetta-translation-environment}
+}
+
+@inproceedings{bellard2005,
+  author    = {Bellard, Fabrice},
+  title     = {QEMU, a Fast and Portable Dynamic Translator},
+  booktitle = {USENIX Annual Technical Conference},
+  year      = {2005},
+  pages     = {46}
+}
+
+
+@article{谢汶兵2024二进制翻译技术综述,
+  title={二进制翻译技术综述},
+  author={谢汶兵 and 田雪 and 漆锋滨 and 武成岗 and 王俊 and 罗巧玲},
+  journal={软件学报},
+  volume={35},
+  number={6},
+  pages={2687--2723},
+  year={2024}
+}
+
+@Article{2022-20196,
+title = {龙芯指令系统架构技术},
+journal = {计算机研究与发展},
+volume = {60},
+number = {1},
+pages = {2-16},
+year = {2023},
+issn = {1000-1239},
+doi = {10.7544/issn1000-1239.202220196},
+url = {https://crad.ict.ac.cn/cn/article/doi/10.7544/issn1000-1239.202220196},
+author = {胡伟武 and 汪文祥 and 吴瑞阳 and 王焕东 and 曾露 and 徐成华 and 高翔 and 张福新}
+}
+
+@thesis{hu2023,
+  author       = {胡起},
+  title        = {指令流分析制导的动态二进制翻译优化技术},
+  tertiaryauthor = {张福新},
+  publisher    = {中国科学院计算技术研究所},
+  year         = {2023},
+  type         = {硕士},
+  keywords     = {动态二进制翻译, 二进制翻译优化, 指令流分析, 龙架构},
+}
+@thesis{YCH2024,
+  author       = {燕澄皓},
+  title        = {二进制翻译中的指令膨胀分析与优化研究},
+  publisher    = {中国科学院计算技术研究所},
+  year         = {2024},
+  type         = {硕士},
+  keywords     = {动态二进制翻译, 二进制翻译优化, 指令流分析, 龙架构},
+}
+
+@INPROCEEDINGS{5306785,
+  author={Borin, Edson and Wu, Youfeng},
+  booktitle={2009 IEEE International Symposium on Workload Characterization (IISWC)}, 
+  title={Characterization of DBT overhead}, 
+  year={2009},
+  volume={},
+  number={},
+  pages={178-187},
+  keywords={Table lookup;Educational institutions;Binary codes;Instruction sets;Microarchitecture;Instruments;Hardware;Runtime;Application software;Performance analysis},
+  doi={10.1109/IISWC.2009.5306785}}
+
+@article{bruening2004efficient,
+  title={Efficient, transparent, and comprehensive runtime code manipulation},
+  author={Bruening, Derek and Amarasinghe, Saman},
+  year={2004},
+  publisher={Massachusetts Institute of Technology, Department of Electrical Engineering~…}
+}
+
+@article{10.1145/3640813,
+author = {Xie, Benyi and Yan, Yue and Yan, Chenghao and Tao, Sicheng and Zhang, Zhuangzhuang and Li, Xinyu and Lan, Yanzhi and Wu, Xiang and Liu, Tianyi and Zhang, Tingting and Zhang, Fuxin},
+title = {An Instruction Inflation Analyzing Framework for Dynamic Binary Translators},
+year = {2024},
+issue_date = {June 2024},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {21},
+number = {2},
+issn = {1544-3566},
+url = {https://doi.org/10.1145/3640813},
+doi = {10.1145/3640813},
+journal = {ACM Trans. Archit. Code Optim.},
+month = mar,
+articleno = {28},
+numpages = {25},
+keywords = {Dynamic binary translation, translation inflation, overhead analysis}
+}
+
+@inproceedings{guo2014eatbit,
+  title={EATBit: Effective automated test for binary translation with high code coverage},
+  author={Guo, Hui and Wang, Zhenjiang and Wu, Chenggang and He, Ruining},
+  booktitle={2014 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={1--6},
+  year={2014},
+  organization={IEEE}
+}
+
+@phdthesis{zou2021,
+  author    = {邹旭},
+  title     = {面向二进制翻译的随机化测试生成研究},
+  year      = {2021},
+  school    = {中国科学院计算技术研究所}
+}
+
 %---------------------------------------------------------------------------%
