--- a/Tex/Mainmatter.tex
+++ b/Tex/Mainmatter.tex
@@ -95,9 +95,9 @@ Deflater能够分析翻译器的翻译规则和优化，而且这种分析是黑
 \section{课题主要研究内容、预期目标}
 课题围绕“龙芯平台的ARM64动态翻译器的优化研究“展开，在已有的龙芯平台的二进制翻译器LATA的基础上，实现一个更加全面，效率更高的动态二进制翻译器LATA-V。研究工作主要分为两个阶段展开：分别是LATA-V框架搭建和LATA-V性能分析和优化。
 
-阶段一的主要工作是实现LATA-V的主要框架，并进一步完善指令翻译，尤其是支持ARM的向量指令和浮点指令到龙架构的翻译；同时在指令翻译的过程中，引入指令随机测试的框架，支持单指令的随机测试，有利于在翻译器的初级阶段快速定位错误的指令翻译。之后，为了方便调试翻译器运行大型应用时，设计并实现QEMU{\&}LATA-V的对比调试框架。阶段一的主要目标是在龙芯平台上正确运行架构为ARM64的SPEC CPU2006基准测试程序，包括所有的定点和浮点子项。
+阶段一的主要工作是实现LATA-V的主要框架，并进一步完善指令翻译，尤其是支持ARM的向量指令和浮点指令到龙架构的翻译；同时在指令翻译的过程中，引入指令随机测试框架，支持单指令的随机测试，有利于在翻译器的初级阶段快速定位错误的指令翻译。之后，为了方便调试翻译器运行大型应用时，设计并实现了基于QEMU的调试框架。阶段一的主要目标是在龙芯平台上正确运行架构为ARM64的SPEC CPU2006基准测试程序，包括所有的定点和浮点子项。
 
-阶段二的主要工作是在阶段一的翻译器的基础上，基于指令膨胀率的性能分析方法，深入分析LATA-V的性能瓶颈；之后，在分析结果的基础上，结合Loongarch架构和ARM架构的异同点，充分利用龙芯平台和龙芯指令集的优势，针对SPEC CPU2006的负载，进行针对性的性能调优。阶段二的预期目标是在SPEC CPU2006的负载上，LATA-V的翻译执行的效率能够达到原生效率的30{\%}。
+阶段二的主要工作是在阶段一的翻译器的基础上，基于指令膨胀率的性能分析方法，深入分析LATA-V的性能瓶颈；之后，在分析结果的基础上，结合Loongarch架构和ARM架构的异同点，充分利用龙芯平台和龙芯指令集的优势，针对SPEC CPU2006的负载，进行针对性的性能调优。阶段二的预期目标是在SPEC CPU2006的负载上，LATA-V的翻译执行的效率能够达到原生效率的40{\%}。
 \section{拟采用的研究方法、技术路线、实验方案及其可行性分析}
 本课题中指令模拟部分是方法分为两部分，其中定点指令通过直接翻译的方式，由ARM指令直接翻译成龙架构的指令。浮点和向量指令支持软浮点和硬浮点两种方式，其中软浮点的方式通过插桩实现，效率较低；硬浮点方式支持ARM指令到龙芯的浮点和向量指令的直接翻译，效率比较高。
 
