--- a/Tex/Mainmatter.tex
+++ b/Tex/Mainmatter.tex
@@ -106,7 +106,7 @@ Deflater能够分析翻译器的翻译规则和优化，而且这种分析是黑
 翻译器的性能分析主要和龙芯平台上的原生程序进行对比实验完成。通过测试程序执行的指令数、运行时间等性能数据，对相应的优化进行定量的分析。
 \section{已有科研基础与所需的科研条件}
 
-本课题中，为了在龙芯平台上运行翻译器LATA-V并进行相关的实验，使用的机器配置为：3A5000处理器芯片，搭载 2*8GB DDR4 3200MHz内存条，运行Loongnix操作系统，使用GCC 8.3.0编译器版本，安装对比调试框架中使用的QEMU工具，版本为qemu-aarch64 version 7.1.0。
+本课题中，为了在龙芯平台上运行翻译器LATA-V并进行相关的实验，使用的机器配置为：3A5000处理器芯片，搭载 2*8GB DDR4 3200MHz内存条，运行Loongnix操作系统，使用GCC 8.3.0编译器版本，安装调试框架中用来对比的翻译器QEMU，版本为qemu-aarch64 version 7.1.0。
 
 以上的科研条件均已具备。
 
@@ -118,9 +118,9 @@ Deflater能够分析翻译器的翻译规则和优化，而且这种分析是黑
 
 2024  年 11  月-2025  年 1  月：完成LATA-V的整体框架，支持ARM的向量和浮点指令到龙架构的高效翻译。
 
-2025  年 1  月-2025  年 2  月：完成LATA-V的随机指令验证框架和QEMU{\&}LATA-V的对比调试框架
+2025  年 1  月-2025  年 2  月：完成LATA-V的随机指令测试框架和调试框架
 
-2025  年 2  月-2025  年 3  月：完成LATA-V的性能分析和性能调优。
+2025  年 2  月-2025  年 3  月：完成LATA-V的瓶颈分析和性能调优。
 
 2025  年 3  月-2025  年 4  月：整理实验数据，撰写毕业论文。
 
